# Email-Agent

./: README.md  pyproject.toml  test.ipynb
my_agent/: agent.py  mcp_client.py  mcp_server.py  tools.py
my_agent/utils/: __init__.py  llm_service.py  state.py
