[project]
name = "simpleai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "ollama>=0.6.2",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
]
